@@ -19,8 +19,7 @@ class FSAbilitiesTest(unittest.TestCase):
 	hardlinks = fsync_dirs = 1
 	dir_inc_perms = 1
 	resource_forks = 0
-
-
+	carbonfile = 0
 
 	# Describes MS-Windows style file system
 	#dir_to_test = "/mnt/fat"
@@ -30,6 +29,7 @@ class FSAbilitiesTest(unittest.TestCase):
 	#fsync_dirs = 1
 	#dir_inc_perms = 0
 	#resource_forks = 0
+	#carbonfile = 0
 	
 	def testReadOnly(self):
 		"""Test basic querying read only"""
@@ -40,6 +40,7 @@ class FSAbilitiesTest(unittest.TestCase):
 		assert fsa.eas == self.eas, fsa.eas
 		assert fsa.acls == self.acls, fsa.acls
 		assert fsa.resource_forks == self.resource_forks, fsa.resource_forks
+		assert fsa.carbonfile == self.carbonfile, fsa.carbonfile
 
 	def testReadWrite(self):
 		"""Test basic querying read/write"""
@@ -61,7 +62,8 @@ class FSAbilitiesTest(unittest.TestCase):
 		assert fsa.fsync_dirs == self.fsync_dirs, fsa.fsync_dirs
 		assert fsa.dir_inc_perms == self.dir_inc_perms, fsa.dir_inc_perms
 		assert fsa.resource_forks == self.resource_forks, fsa.resource_forks
-
+		assert fsa.carbonfile == self.carbonfile, fsa.carbonfile
+		
 		ctq_rp = new_dir.append("chars_to_quote")
 		assert ctq_rp.lstat()
 		fp = ctq_rp.open('rb')
